--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 
     <properties>
         <java.version>11</java.version>
+        <sonar.projectKey>perrinsjason_rsocket-proto-greeting-service</sonar.projectKey>
+        <sonar.organization>perrinsjason</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <project.scm.id>github</project.scm.id>
     </properties>
 
     <dependencies>
@@ -59,7 +63,55 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+            <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <version>2.5.2</version>
+            <configuration>
+                <to>
+                    <!--<image>localhost:5000/serverless</image>-->
+                    <image>registry.hub.docker.com/perrinsjason/rsocket-proto-greeting-service</image>
+                    <!--<credHelper>desktop</credHelper>-->
+                    <tags>
+                        <tag>${project.version}</tag>
+                        <tag>latest</tag>
+                    </tags>
+                </to>
+                <container>
+                    <ports>
+                        <port>7075</port>
+                        <port>8085</port>
+                    </ports>
+                    <labels>
+                        <name>rsocket-proto-greeting-service</name>
+                    </labels>
+                </container>
+            </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Demo greetings service</name>
+            <url>https://maven.pkg.github.com/perrinsjason/rsocket-proto-greeting-service</url>
+        </repository>
+    </distributionManagement>
+    <scm>
+        <connection>scm:git:https://github.com/perrinsjason/rsocket-proto-greeting-service.git</connection>
+        <url>http://github.com/perrinsjason/rsocket-proto-greeting-service</url>
+        <developerConnection>scm:git:https://github.com/perrinsjason/rsocket-proto-greeting-service.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
 </project>
