--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.perrinsjason.demo</groupId>
+            <artifactId>rsocket-maven-proto</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
