--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -15,5 +15,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
-    - name: Build with Maven
+    - name: validate with Maven
       run: mvn -B validate --file pom.xml
+    - name: compile with Maven
+      run: mvn -B compile --file pom.xml
