--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -11,10 +11,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.11
-      uses: actions/setup-java@v1
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
       with:
-        java-version: 1.11
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-maven-
+    - name: Setup Java JDK
+      uses: actions/setup-java@v1.4.2
+      with:
+        java-version: 14
+        server-id: github.perrinjason
     - name: validate with Maven
       run: mvn -B validate --file pom.xml
     - name: compile with Maven
