--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
+            <id>github.perrinjason</id>
             <name>Demo greetings service</name>
             <url>https://maven.pkg.github.com/perrinsjason/rsocket-proto-greeting-service</url>
         </repository>
