--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
         <sonar.projectKey>perrinsjason_rsocket-proto-greeting-service</sonar.projectKey>
         <sonar.organization>perrinsjason</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <project.scm.id>github</project.scm.id>
+        <!--<project.scm.id>github</project.scm.id>-->
+       <!-- <project.scm.id>perrinsjason.rsocket-maven-proto</project.scm.id>-->
     </properties>
 
     <dependencies>
@@ -40,7 +41,7 @@
         <dependency>
             <groupId>com.perrinsjason.demo</groupId>
             <artifactId>rsocket-maven-proto</artifactId>
-            <version>1.8</version>
+            <version>1.9</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -81,36 +82,36 @@
                 </configuration>
             </plugin>
             <plugin>
-            <groupId>com.google.cloud.tools</groupId>
-            <artifactId>jib-maven-plugin</artifactId>
-            <version>2.5.2</version>
-            <configuration>
-                <to>
-                    <!--<image>localhost:5000/serverless</image>-->
-                    <image>registry.hub.docker.com/perrinsjason/rsocket-proto-greeting-service</image>
-                    <!--<credHelper>desktop</credHelper>-->
-                    <tags>
-                        <tag>${project.version}</tag>
-                        <tag>latest</tag>
-                    </tags>
-                </to>
-                <container>
-                    <ports>
-                        <port>7075</port>
-                        <port>8085</port>
-                    </ports>
-                    <labels>
-                        <name>rsocket-proto-greeting-service</name>
-                    </labels>
-                </container>
-            </configuration>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <to>
+                        <!--<image>localhost:5000/serverless</image>-->
+                        <image>registry.hub.docker.com/perrinsjason/rsocket-proto-greeting-service</image>
+                        <!--<credHelper>desktop</credHelper>-->
+                        <tags>
+                            <tag>${project.version}</tag>
+                            <tag>latest</tag>
+                        </tags>
+                    </to>
+                    <container>
+                        <ports>
+                            <port>7075</port>
+                            <port>8085</port>
+                        </ports>
+                        <labels>
+                            <name>rsocket-proto-greeting-service</name>
+                        </labels>
+                    </container>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 
     <distributionManagement>
         <repository>
-            <id>github.perrinjason</id>
+            <id>github</id>
             <name>Demo greetings service</name>
             <url>https://maven.pkg.github.com/perrinsjason/rsocket-proto-greeting-service</url>
         </repository>
@@ -118,8 +119,19 @@
     <scm>
         <connection>scm:git:https://github.com/perrinsjason/rsocket-proto-greeting-service.git</connection>
         <url>http://github.com/perrinsjason/rsocket-proto-greeting-service</url>
-        <developerConnection>scm:git:https://github.com/perrinsjason/rsocket-proto-greeting-service.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/perrinsjason/rsocket-proto-greeting-service.git
+        </developerConnection>
         <tag>HEAD</tag>
     </scm>
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>Proto</name>
+            <url>https://maven.pkg.github.com/perrinsjason/rsocket-maven-proto</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
