--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/setup-java@v1.4.2
       with:
         java-version: 14
-        server-id: github.perrinjason
+        server-id: github
     - name: validate with Maven
       run: mvn -B validate --file pom.xml
     - name: compile with Maven
