--- a/.github/workflows/release-manual.yml
+++ b/.github/workflows/release-manual.yml
@@ -42,10 +42,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK 14
         uses: actions/setup-java@v1
         with:
-          java-version: 11.0.4
+          java-version: 14
+          server-id: github
       - name: Publish artifact on GitHub Packages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -67,10 +68,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK 14
         uses: actions/setup-java@v1
         with:
-          java-version: 11.0.4
+          java-version: 14
+          server-id: github
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
