--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.perrinsjason.demo</groupId>
     <artifactId>rsocket-proto-greeting-service</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>rsocket-proto-greeting-service</name>
     <description>Demo project for Spring Boot</description>
 
@@ -120,7 +120,7 @@
         <url>http://github.com/perrinsjason/rsocket-proto-greeting-service</url>
         <developerConnection>scm:git:https://github.com/perrinsjason/rsocket-proto-greeting-service.git
         </developerConnection>
-        <tag>v0.0.3</tag>
+        <tag>HEAD</tag>
     </scm>
     <repositories>
         <repository>
